# libui-ng

./: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  LICENSE.md  NEWS.md  README.md  _c_h_a_n_g_e_l_o_g_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  bug.html  build.zig  classes.html  compile_log.txt  config.h.in  dir_04f2ecc425faf0d475a3caf484e551f3.html  dir_be9243ea0451cb7b4349af58d070258e.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen-subpage-api_8md.html  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_m.html  (+190 more)
common/: attribute.c  attrlist.c  control.c  controlsigs.h  dragdestination.c  matrix.c  meson.build  table.c  uipriv.h  version.c
darwin/: a11y.m  alloc.m  area.m  attrstr.m  box.m  button.m  checkbox.m  colorbutton.m  combobox.m  control.m  datetimepicker.m  dragcontext.m  dragdata.m  dragdestination.m  draw.h  draw.m  drawtext.m  editablecombo.m  entry.m  event.m  fontbutton.m  fontmatch.m  fonttraits.m  form.m  graphemes.m  grid.m  group.m  image.m  label.m  main.m  menu.m  meson.build  multilineentry.m  nstextfield.m  progressbar.m  radiobuttons.m  separator.m  slider.m  spinbox.m  stddialogs.m  (+9 more)
doc/: .gitignore  Readme.md  build_authors_file.py  ci-pipelines.md  doxygen.md
examples/: example.static.manifest  meson.build
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  searchdata.js  typedefs_0.js  variables_0.js  (+16 more)
subprojects/: cmocka.wrap
test/: images.c  main.c  menus.c  meson.build  page1.c  page13.c  page15.c  page16.c  page17.c  page18.c  page4.c  page5.c  test.h
test/qa/: button.c  checkbox.c  dragdestination.c  entry.c  image_buffer.c  imagebuffer.c  label.c  main.c  meson.build  progressbar.c  qa.c  qa.h  radiobuttons.c  resources.rc  separator.c  spinbox.c  window.c
test/unit/: button.c  checkbox.c  combobox.c  drawmatrix.c  entry.c  imagebuffer.c  init.c  label.c  main.c  menu.c  meson.build  progressbar.c  radiobuttons.c  resources.rc  slider.c  spinbox.c  unit.h  unit.manifest  window.c
unix/: a11y.c  alloc.c  area.c  box.c  button.c  cellrendererbutton.c  checkbox.c  combobox.c  control.c  datetimepicker.c  dragcontext.c  dragcontext.h  dragdata.c  draw.c  draw.h  drawmatrix.c  drawpath.c  drawtext.c  editablecombo.c  entry.c  fontbutton.c  form.c  group.c  image.c  label.c  main.c  menu.c  meson.build  (+14 more)
(+83 files in other folders)
